# aegix-engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  VulkaniteRenderEngine.sln  VulkaniteRenderEngine.vcxproj  VulkaniteRenderEngine.vcxproj.filters
shaders/: pbs.frag  (+38 more)
src/: CMakeLists.txt  buffer.cpp  buffer.h  camera.cpp  camera.h  color.cpp  color.h  component.cpp  component.h  default_scene.cpp  default_scene.h  descriptors.h  frame_info.h  input.cpp  input.h  keyboard_movement_controller.cpp  keyboard_movement_controller.h  main.cpp  math_utilities.h  model.cpp  model.h  pch.h  pipeline.cpp  pipeline.h  renderer.h  scene.cpp  scene.h  scene_entity.cpp  scene_entity.h  scene_object.cpp  scene_object.h  simple_render_system.cpp  simple_render_system.h  swap_chain.h  texture.cpp  texture.h  vre_application.cpp  vre_application.h  vre_buffer.cpp  vre_buffer.h  (+28 more)
src/aegis/: CMakeLists.txt  engine.cpp  engine.h  pch.h
src/aegis/ai/: ai_component.h  ai_scene.h  blackboard.h  test_ai_component.cpp  test_ai_component.h
src/aegis/core/: CMakeLists.txt  asset.h  asset_manager.h  editor_layer.h  globals.h  input.h  layer.h  layer_stack.h  logging.h  profiler.h  window.cpp  window.h
src/aegis/graphics/: CMakeLists.txt  deletion_queue.cpp  deletion_queue.h  descriptors.h  device.cpp  device.h  draw_batch_registry.cpp  draw_batch_registry.h  frame_info.h  globals.h  gpu_timer.h  pipeline.h  renderer.cpp  renderer.h
src/aegis/math/: CMakeLists.txt  interpolation.cpp  math.cpp  math.h  random.cpp
src/aegis/physics/: CMakeLists.txt  motion_dynamics.cpp  motion_dynamics.h
src/aegis/scene/: CMakeLists.txt  components.h  description.h  entity.cpp  entity.h
src/aegis/scripting/: script_base.h  script_manager.cpp  test_script.h
src/aegis/ui/: CMakeLists.txt
src/aegis/utils/: CMakeLists.txt  color.h  factory.h  file.cpp  file.h  rolling_average.h  timer.h
src/aegix/: CMakeLists.txt  engine.cpp  engine.h
src/aegix/ai/: knowledge.h  option_manager.cpp  option_manager.h  test_ai_component.h
src/aegix/core/: CMakeLists.txt  assert.h  asset.h  asset_manager.cpp  asset_manager.h  editor_layer.cpp  editor_layer.h  globals.h  input.cpp  input.h  logging.h  profiler.h  window.cpp  window.h
src/aegix/graphics/: CMakeLists.txt  bindless_descriptor_set.cpp  bindless_descriptor_set.h  buffer.cpp  buffer.h  deletion_queue.cpp  descriptors.cpp  descriptors.h  device.cpp  device.h  draw_batch_registry.cpp  draw_batch_registry.h  frame_info.h  frustum.h  globals.h  graphics.h  pipeline.cpp  pipeline.h  render_context.h  renderer.cpp  renderer.h  static_mesh.cpp  static_mesh.h  swap_chain.cpp  swap_chain.h  uniform_buffer.h  vulkan_context.cpp  vulkan_context.h  vulkan_tools.cpp  vulkan_tools.h
src/aegix/math/: interpolation.cpp  interpolation.h  math.cpp  math.h  perlin_noise.cpp  perlin_noise.h  print.h  random.cpp  random.h
src/aegix/physics/: motion_dynamics.cpp
src/aegix/scene/: CMakeLists.txt  component_traits.h  components.h  entity.cpp  entity.h  gltf_loader.cpp  gltf_loader.h  scene.cpp  scene.h  system.h
src/aegix/scripting/: CMakeLists.txt  script_base.h  script_manager.cpp  script_manager.h  test_script.h
src/aegix/ui/: CMakeLists.txt  ui.cpp  ui.h
src/aegix/utils/: color.cpp  color.h  file.cpp  file.h  rolling_average.h  timer.h  utils.h
src/ai/: ai-component.cpp  ai-component.h  ai-scene.h  ai_component.cpp  ai_component.h  ai_scene.h  blackboard.h  knowledge.h  option.cpp  option.h  option_manager.cpp  option_manager.h  test_ai_component.cpp  test_ai_component.h
src/ai/considerations/: consideration.cpp  consideration.h
src/ai/decision_tree_example/: decision_scene.h  decision_tree_ai_component.cpp  decision_tree_ai_component.h  example_options.h  my_decision_tree.h
src/ai/options/: option.cpp  option.h  option_text_output.h  steering_behaviour.cpp  steering_behaviour.h  steering_behaviour_seek.cpp  steering_behaviour_seek.h
src/core/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  editor_layer.cpp  editor_layer.h  engine.cpp  engine.h  globals.h  input.cpp  input.h  layer.h  layer_stack.h  logging.h  math_utilities.h  profiler.h  vulkanite_engine.cpp  vulkanite_engine.h  window.cpp  window.h
src/graphics/: CMakeLists.txt  buffer.cpp  buffer.h  camera.cpp  camera.h  deletion_queue.cpp  deletion_queue.h  descriptors.cpp  descriptors.h  device.cpp  device.h  frame_info.h  globals.h  graphics.h  gui.cpp  gui.h  lights.h  material.h  model.cpp  model.h  pipeline.cpp  pipeline.h  render_system.cpp  render_system.h  renderer.cpp  renderer.h  renderpass.cpp  renderpass.h  static_mesh.cpp  static_mesh.h  swap_chain.cpp  swap_chain.h  texture.cpp  texture.h  uniform_buffer.h  vulkan_tools.cpp  vulkan_tools.h  window.cpp  window.h
src/math/: CMakeLists.txt  interpolation.cpp  math.cpp  math.h  perlin_noise.cpp  perlin_noise.h  print.h  random.cpp
src/physics/: CMakeLists.txt  motion_dynamics.cpp  motion_dynamics.h
src/renderer/: buffer.cpp  buffer.h  camera.cpp  camera.h  descriptors.cpp  descriptors.h  device.cpp  device.h  frame_info.h  model.cpp  model.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  swap_chain.cpp  swap_chain.h  texture.cpp  texture.h  window.cpp  window.h
src/scene/: CMakeLists.txt  component.cpp  component.h  components.cpp  components.h  default_scene.h  description.h  entity.cpp  entity.h  gltf_loader.cpp  gltf_loader.h  scene.cpp  scene.h  scene_entity.cpp  scene_entity.h  script_component_base.h  system.h
src/scripting/: CMakeLists.txt  script_base.h  script_manager.cpp  script_manager.h  test_script.h
src/shaders/: simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
src/systems/: point_light_system.cpp  point_light_system.h  simple_render_system.cpp  simple_render_system.h
src/ui/: CMakeLists.txt  gui.cpp  gui.h  layer.h  ui.cpp  ui.h
src/utils/: CMakeLists.txt  color.cpp  color.h  factory.h  file.cpp  file.h  file_utils.h  gltf.h  math_utils.cpp  math_utils.h  perlin_noise.cpp  perlin_noise.h  random.cpp  random.h  rolling_average.h  timer.h  utils.h
(+375 files in other folders)
